interp roll